fix overflow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   -ms-interpolation-mode: nearest-neighbor;
   color: white;
   text-shadow: black 2px 2px 0px;
+  overflow-x: hidden;
 }
 
 .town {
